添加香港真实时间以及动态预测
